tests/paczka1/small_fuzzy/30718967.err
Error in line 1: q2E S654 14,6
Error in line 3: q2E A618 5,2
Error in line 2: lc06f2BR A618 45,6
Error in line 7: HobF3XbhElJ S786 79,5
Error in line 13: q2E S654 286,9
